src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.slick-slide > div {
    padding: 0 10px; /* Espaciado entre los elementos */
    box-sizing: border-box; /* Asegura que el padding no desborde */
  }

/* Ajustes para elevar los dots del slider */
.chart-with-dots {
  position: relative;
  padding-bottom: 2rem; /* deja espacio para los dots */
}

.chart-with-dots .slick-dots {
  position: absolute;
  bottom: 2.0rem;       /* qué tan cerca del fondo del chart */
  left: 50%;
  transform: translateX(-50%);
}

@layer base {
  :root {
        --background: 0 0% 100%;
        --foreground: 0 0% 3.9%;
        --card: 0 0% 100%;
        --card-foreground: 0 0% 3.9%;
        --popover: 0 0% 100%;
        --popover-foreground: 0 0% 3.9%;
        --primary: 0 0% 9%;
        --primary-foreground: 0 0% 98%;
        --secondary: 0 0% 96.1%;
        --secondary-foreground: 0 0% 9%;
        --muted: 0 0% 96.1%;
        --muted-foreground: 0 0% 45.1%;
        --accent: 0 0% 96.1%;
        --accent-foreground: 0 0% 9%;
        --destructive: 0 84.2% 60.2%;
        --destructive-foreground: 0 0% 98%;
        --border: 0 0% 89.8%;
        --input: 0 0% 89.8%;
        --ring: 0 0% 3.9%;
        --chart-1: 12 76% 61%;
        --chart-2: 173 58% 39%;
        --chart-3: 197 37% 24%;
        --chart-4: 43 74% 66%;
        --chart-5: 27 87% 67%;
        --radius: 0.5rem
    }
  .dark {
        --background: 0 0% 3.9%;
        --foreground: 0 0% 98%;
        --card: 0 0% 3.9%;
        --card-foreground: 0 0% 98%;
        --popover: 0 0% 3.9%;
        --popover-foreground: 0 0% 98%;
        --primary: 0 0% 98%;
        --primary-foreground: 0 0% 9%;
        --secondary: 0 0% 14.9%;
        --secondary-foreground: 0 0% 98%;
        --muted: 0 0% 14.9%;
        --muted-foreground: 0 0% 63.9%;
        --accent: 0 0% 14.9%;
        --accent-foreground: 0 0% 98%;
        --destructive: 0 62.8% 30.6%;
        --destructive-foreground: 0 0% 98%;
        --border: 0 0% 14.9%;
        --input: 0 0% 14.9%;
        --ring: 0 0% 83.1%;
        --chart-1: 220 70% 50%;
        --chart-2: 160 60% 45%;
        --chart-3: 30 80% 55%;
        --chart-4: 280 65% 60%;
        --chart-5: 340 75% 55%
    }
}



@layer base {
  * {
    @apply border-border;
    }
  body {
    @apply bg-background text-foreground;
    }
}

.extractDataIcon .adsk-button-icon {
  background-color: #f7005f; 
  color: #ffffff;
  display: flex;
  justify-content: center;
  align-items: center;
  font-weight: bold;
  width: 24px;
  height: 24px;
  border-radius: 50%; 
  font-size: 12px;
}
.extractDataIcon .adsk-button-icon::after {
  content: "ED";  
}

.selectCategoryIcon .adsk-button-icon {
  background-color: #f7a000; 
  color: #ffffff;
  display: flex;
  justify-content: center;
  align-items: center;
  font-weight: bold;
  width: 24px;
  height: 24px;
  border-radius: 50%;
  font-size: 10px;
}
.selectCategoryIcon .adsk-button-icon::after {
  content: "CS";  
}


.selectVisibleIcon .adsk-button-icon {
  background-color: #f7a000; 
  color: #ffffff;
  display: flex;
  justify-content: center;
  align-items: center;
  font-weight: bold;
  width: 24px;
  height: 24px;
  border-radius: 50%;
  font-size: 10px;
}
.selectVisibleIcon .adsk-button-icon::after {
  content: "SV";  
}

.showDbIdExtensionIcon .adsk-button-icon {
  background-color: #f7a000; 
  color: #ffffff;
  display: flex;
  justify-content: center;
  align-items: center;
  font-weight: bold;
  width: 24px;
  height: 24px;
  border-radius: 50%;
  font-size: 10px;
}
.showDbIdExtensionIcon .adsk-button-icon::after {
  content: "SD";  
}

.selectTypeCategoryIcon .adsk-button-icon {
  background-color: #f7a000;
  color: #ffffff;
  display: flex;
  justify-content: center;
  align-items: center;
  font-weight: bold;
  width: 24px;
  height: 24px;
  border-radius: 50%;
  font-size: 10px;
}
.selectTypeCategoryIcon .adsk-button-icon::after {
  content: "T";  
}

@layer components {
  /* Header y Sidebar homogéneos */
  .app-header{
    @apply bg-[#ffffff] text-black;
  }

  .app-sidebar {
    @apply bg-[#f6f6f6] text-black;
  }

  /* Botón primario */
  .btn-primary {
    @apply bg-[#e2e2e2] text-black;
  }
  .btn-primary:hover {
    @apply bg-[#2ea3e3] text-white font-bold;
  }

  /* Si tuvieras botones secundarios u otros, sigue el mismo patrón */
  .btn-secondary {
    @apply bg-[#2980b9] text-white;
  }
  .btn-secondary:hover {
    @apply bg-[#e67e22];
  }

  .nav-link {
    @apply text-black transition-colors;
  }

  .nav-link:hover {
    @apply text-[#2ea3e3];      /* utiliza el azul #2ea3e3 */
  }

}

